# ext-php-rs

./: .dockerignore  .gitignore  .lefthook.yml  .release-plz.toml  404.html  CHANGELOG.md  CNAME  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  LICENSE_APACHE  LICENSE_MIT  NEW_MACROS.md  README.md  allowed_bindings.rs  build.rs  cargo-php.html  crates.js  docsrs_bindings.rs  exceptions.html  flake.nix  index.html  ini-settings.html  introduction.html  php  print.html  search-index.js  searchindex.js  searchindex.json  settings.html  source-files.js  toc.html  toc.js  unix_build.rs  windows_build.rs  wrapper.h
.cargo/: config.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
advanced/: allowed_bindings.html  async_impl.html
aho_corasick/: struct.FindIter.html  struct.FindOverlappingIter.html  struct.StreamFindIter.html
anyhow/: all.html  index.html  macro.anyhow.html  macro.bail.html  macro.ensure.html  sidebar-items.js  struct.Chain.html  struct.Error.html  trait.Context.html  type.Result.html
crates/cli/: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE_APACHE  README.md  allowed_bindings.rs  build.rs
crates/cli/src/: ext.rs  lib.rs  main.rs  stub_symbols.rs  validators.rs
crates/macros/: CHANGELOG.md  Cargo.toml
crates/macros/src/: class.rs  constant.rs  enum_.rs  extern_.rs  fastcall.rs  function.rs  helpers.rs  impl_.rs  interface.rs  lib.rs  method.rs  module.rs  module_builder.rs  old_class.rs  old_impl.rs  parsing.rs  startup_function.rs  syn_ext.rs  zval.rs
crates/macros/tests/expand/: class.expanded.rs  class.rs  const.expanded.rs  const.rs  enum.expanded.rs  enum.rs  interface.expanded.rs  interface.rs
darling/: all.html  index.html  macro.uses_lifetimes.html  macro.uses_type_params.html  sidebar-items.js  struct.Error.html  trait.FromDeriveInput.html  trait.FromField.html  trait.FromGenericParam.html  trait.FromGenerics.html  trait.FromMeta.html  trait.FromTypeParam.html  trait.FromVariant.html  type.Result.html
darling_core/: all.html  index.html  macro.uses_lifetimes.html  macro.uses_type_params.html  sidebar-items.js  trait.FromDeriveInput.html  trait.FromField.html  trait.FromGenericParam.html  trait.FromGenerics.html  trait.FromMeta.html  trait.FromTypeParam.html  trait.FromVariant.html
darling_macro/: all.html  derive.FromDeriveInput.html  derive.FromField.html  derive.FromMeta.html  derive.FromMetaItem.html  derive.FromTypeParam.html  derive.FromVariant.html  index.html  sidebar-items.js
example/skel/: .gitignore  Cargo.toml  composer.json  php  test.php
example/skel/src/: allocator.rs  lib.rs
examples/: hello_world.html  hello_world.rs  index.html
ext-php-rs-derive/: Cargo.toml  LICENSE_APACHE  LICENSE_MIT
ext-php-rs-derive/src/: class.rs  constant.rs  error.rs  extern_.rs  function.rs  impl_.rs  lib.rs  method.rs  module.rs  startup_function.rs  syn_ext.rs  zval.rs
ext_php_rs/: all.html  attr.php_class.html  attr.php_const.html  attr.php_extern.html  attr.php_function.html  attr.php_impl.html  attr.php_module.html  attr.php_startup.html  derive.ZendObjectHandler.html  index.html  macro.call_user_func!.html  macro.call_user_func.html  macro.info_table_end!.html  macro.info_table_end.html  macro.info_table_header!.html  macro.info_table_header.html  macro.info_table_row!.html  macro.info_table_row.html  macro.info_table_start!.html  macro.info_table_start.html  macro.parse_args!.html  macro.parse_args.html  macro.throw!.html  macro.throw.html  sidebar-items.js
ext_php_rs_derive/: all.html  attr.php_class.html  attr.php_const.html  attr.php_extern.html  attr.php_function.html  attr.php_impl.html  attr.php_module.html  attr.php_startup.html  derive.ZendObjectHandler.html  index.html  sidebar-items.js
fnv/: all.html  index.html  struct.FnvHasher.html  type.FnvBuildHasher.html  type.FnvHashMap.html  type.FnvHashSet.html
getting-started/: cargo-php.html  hello_world.html  installation.html
guide/: 404.html  book.toml  index.html  introduction.html  print.html  searchindex.js  searchindex.json
ident_case/: all.html  index.html  (+2 more)
tests/: Cargo.toml  build.rs  guide.rs  integration.rs  module.rs  sapi.rs
tests/integration/: .gitignore  array.php  array_assoc.php  binary.php  bool.php  callable.php  class.php  closure.php  closure_once.php  nullable.php  number_float.php  number_signed.php  number_unsigned.php  object.php  str.php  string.php
tests/integration/array/: array.rs  basic.phpt
tests/integration/string/: basic.phpt  string.rs
tests/phpt/: another.php  another.rs  another.stdout  hello_world.php  hello_world.rs  hello_world.stdout
tests/src/: lib.rs
tests/src/integration/: _utils.php  array.php  array.rs  binary.php  binary.rs  bool.php  bool.rs  callable.php  callable.rs  class.php  class.rs  closure.php  closure.rs  exception.php  exception.rs  globals.php  globals.rs  iterator.rs  magic_method.php  magic_method.rs  mod.rs  nullable.php  nullable.rs  number.php  number.rs  object.php  object.rs  string.php  string.rs  types.php  types.rs  variadic_args.php  variadic_args.rs
tests/src/integration/array/: array.php  mod.rs
tests/src/integration/binary/: binary.php  mod.rs
tests/src/integration/bool/: bool.php  mod.rs
tests/src/integration/callable/: callable.php  mod.rs
tests/src/integration/class/: class.php  mod.rs
tests/src/integration/closure/: closure.php  mod.rs
tests/src/integration/defaults/: defaults.php  mod.rs
tests/src/integration/enum_/: enum.php  mod.rs
tests/src/integration/exception/: exception.php  mod.rs
tests/src/integration/globals/: globals.php  mod.rs
tests/src/integration/interface/: interface.php  mod.rs
tests/src/integration/iterator/: iterator.php  mod.rs
tests/src/integration/magic_method/: magic_method.php  mod.rs
tests/src/integration/nullable/: mod.rs  nullable.php
tests/src/integration/number/: mod.rs  number.php
tests/src/integration/object/: mod.rs  object.php
tests/src/integration/string/: mod.rs  string.php
tests/src/integration/types/: mod.rs  types.php
tests/src/integration/variadic_args/: mod.rs  variadic_args.php
(+8563 files in other folders)
