[package]
name = "ext-php-rs"
description = "Bindings for the Zend API to build PHP extensions natively in Rust."
repository = "https://github.com/davidcole1340/ext-php-rs"
homepage = "https://github.com/davidcole1340/ext-php-rs"
license = "MIT OR Apache-2.0"
keywords = ["php", "ffi", "zend"]
version = "0.8.2"
authors = ["David Cole <david.cole1340@gmail.com>"]
edition = "2018"
categories = ["api-bindings"]
exclude = ["/.github", "/.crates", "/guide"]

[dependencies]
bitflags = "1.2.1"
parking_lot = "0.12.1"
cfg-if = "1.0"
once_cell = "1.8.0"
anyhow = { version = "1", optional = true }
ext-php-rs-derive = { version = "=0.8.2", path = "./crates/macros" }

[dev-dependencies]
skeptic = "0.13"

[build-dependencies]
anyhow = "1"
# bindgen = { version = "0.59" }
bindgen = "0.60"
cc = "1.0"
skeptic = "0.13"
php-discovery = "0.1.2"

[target.'cfg(windows)'.build-dependencies]
ureq = { version = "2.4", features = ["native-tls", "gzip"], default-features = false }
native-tls = "0.2"
zip = "0.6"

[features]
closure = []

[workspace]
members = [
    "crates/macros",
    "crates/cli"
]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docs"]
