[package]
name = "ext-php-rs"
description = "Bindings for the Zend API to build PHP extensions natively in Rust."
repository = "https://github.com/davidcole1340/ext-php-rs"
homepage = "https://github.com/davidcole1340/ext-php-rs"
license = "MIT OR Apache-2.0"
keywords = ["php", "ffi", "zend"]
version = "0.14.0"
authors = ["David Cole <david.cole1340@gmail.com>"]
edition = "2021"
categories = ["api-bindings"]
exclude = ["/.github", "/.crates"]
autotests = false

[dependencies]
bitflags = "2"
parking_lot = { version = "0.12", features = ["arc_lock"] }
cfg-if = "1.0"
once_cell = "1.17"
anyhow = { version = "1", optional = true }
ext-php-rs-derive = { version = "=0.11.0", path = "./crates/macros" }

[dev-dependencies]
skeptic = "0.13"

[build-dependencies]
anyhow = "1"
bindgen = "0.68.1"
cc = "1.0"
skeptic = "0.13"

[target.'cfg(windows)'.build-dependencies]
ureq = { version = "3.0", features = [
    "native-tls",
    "gzip",
], default-features = false }
native-tls = "0.2"
zip = "4.0"

[features]
closure = []
embed = []
anyhow = ["dep:anyhow"]

[workspace]
members = [
    "crates/macros",
    "crates/cli",
    "tests"
]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docs"]

[lints.rust]
missing_docs = "warn"

[[example]]
name = "hello_world"
crate-type = ["cdylib"]

[[test]]
name = "guide_tests"
path = "tests/guide.rs"
required-features = ["embed", "closure", "anyhow"]

[[test]]
name = "module_tests"
path = "tests/module.rs"

[[test]]
name = "sapi_tests"
path = "tests/sapi.rs"
