[package]
name = "tests"
version = "0.0.0"
edition = "2021"
publish = false
license = "MIT OR Apache-2.0"

[dependencies]
cfg-if = "1.0.1"
ext-php-rs = { path = "../", default-features = false, features = ["closure"] }

[features]
default = ["enum"]
enum = ["ext-php-rs/enum"]

[lib]
crate-type = ["cdylib"]
