[package]
name = "tests"
version = "0.0.0"
edition = "2021"
publish = false
license = "MIT OR Apache-2.0"

[dependencies]
ext-php-rs = { path = "../", default-features = false, features = ["closure", "runtime"] }

[features]
default = ["enum"]
enum = ["ext-php-rs/enum"]

[lib]
crate-type = ["cdylib"]
