[package]
name = "cargo-php"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ext-php-rs = { path = "../../" }

clap = "3.0.0-beta.5"
anyhow = "1"
dialoguer = "0.9"
libloading = "0.7"
cargo_metadata = "0.14"