[package]
name = "cargo-php"
description = "Installs extensions and generates stub files for PHP extensions generated with `ext-php-rs`."
repository = "https://github.com/davidcole1340/ext-php-rs"
homepage = "https://github.com/davidcole1340/ext-php-rs"
license = "MIT OR Apache-2.0"
keywords = ["php", "ffi", "zend"]
version = "0.1.11"
authors = ["David Cole <david.cole1340@gmail.com>"]
edition = "2018"
categories = ["api-bindings", "command-line-interface"]

[dependencies]
ext-php-rs = { version = "0.14", path = "../../" }

clap = { version = "4.0", features = ["derive"] }
anyhow = "1"
dialoguer = "0.11"
libloading = "0.8"
cargo_metadata = "0.20"
semver = "1.0"

[lints.rust]
missing_docs = "warn"
