[package]
name = "cargo-php"
description = "Installs extensions and generates stub files for PHP extensions generated with `ext-php-rs`."
repository = "https://github.com/extphprs/ext-php-rs"
homepage = "https://ext-php.rs"
license = "MIT OR Apache-2.0"
keywords = ["php", "ffi", "zend"]
version = "0.1.14"
authors = [
    "Xenira <xenira@php.rs>",
    "David Cole <david.cole1340@gmail.com>",
    "Pierre Tondereau <pierre.tondereau@protonmail.com>",
]
edition = "2024"
categories = ["api-bindings", "command-line-interface"]

[dependencies]
ext-php-rs = { version = "0.15", default-features = false, path = "../../" }

clap = { version = "4.0", features = ["derive"] }
anyhow = "1"
dialoguer = "0.12"
libloading = "0.9"
cargo_metadata = "0.23"
semver = "1.0"

[lints.rust]
missing_docs = "warn"

[features]
default = ["enum"]
enum = ["ext-php-rs/enum"]
