[package]
name = "ext-php-rs-derive"
description = "Derive macros for ext-php-rs."
repository = "https://github.com/davidcole1340/ext-php-rs"
homepage = "https://github.com/davidcole1340/ext-php-rs"
license = "MIT OR Apache-2.0"
version = "0.11.0"
authors = ["David Cole <david.cole1340@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.100", features = ["full", "extra-traits", "printing"] }
darling = "0.20"
quote = "1.0.9"
proc-macro2 = "1.0.26"
lazy_static = "1.4.0"
anyhow = "1.0"
convert_case = "0.8.0"

[lints.rust]
missing_docs = "warn"
