[package]
name = "skel"
version = "0.1.0"
authors = ["David Cole <david.cole1340@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ext-php-rs = { path = "../../", features = ["alloc", "closure"] }

[lib]
name = "skel"
crate-type = ["cdylib"]
